# MaterialListEx

./: .gitattributes  .gitignore  BlockProcess.hpp  CMakeLists.txt  Calc_Tool.hpp  EntityProcess.hpp  File_Tool.hpp  ItemProcess.hpp  MUTF8_Test.cpp  MUTF8_Test.vcxproj.filters  MUTF8_Tool.hpp  MaterialListEx.cpp  MaterialListEx.sln  MaterialListEx.vcxproj  Mutf8_Helper.hpp  NBT_Helper.hpp  NBT_Node.hpp  NBT_Reader.hpp  NBT_Tool.hpp  NBT_Writer.hpp  README.md  TileEntityProcess.hpp  Windows_ANSI.hpp  main.cpp  opt.nbt  vcpkg.json
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
Endian_Test/: Endian_Test.cpp  Endian_Test.vcxproj
FileSystemTest/: FileSystemTest.cpp  FileSystemTest.vcxproj  FileSystemTest.vcxproj.filters
MUTF8_Test/: MUTF8_Test.cpp  MUTF8_Test.vcxproj
MaterialListEx/: AllBlockTest.litematic  BlockProcess.hpp  CMakeLists.txt  CSV_Tool.hpp  Calc_Tool.hpp  CodeTimer.hpp  Compression_Utils.hpp  Converter.cpp  CountFormatter.hpp  CurrentModulePath.hpp  EntityProcess.hpp  FileSystemHelper.hpp  File_Tool.hpp  ItemProcess.hpp  Language.hpp  LitematicToMaterialList.cpp  LitematicToMaterialList.h  MUTF8_Tool.hpp  MaterialListEx.cpp  MaterialListEx.sln  MaterialListEx.vcxproj  MaterialListEx.vcxproj.filters  MemoryLeakCheck.hpp  Modified_Utf-8_Docs.html  Modified_Utf-8_Docs_2.html  NBT_All.hpp  NBT_Array.hpp  NBT_Compound.hpp  NBT_Endian.hpp  NBT_Hash.hpp  NBT_Helper.hpp  NBT_IO.hpp  NBT_List.hpp  NBT_Node.hpp  NBT_Node_View.hpp  NBT_Reader.hpp  NBT_Reader.hpp.old  NBT_String.hpp  NBT_TAG.hpp  NBT_Type.hpp  (+14 more)
MaterialListEx/config/: README.md  item_stack_count.json
MaterialListEx/nbt/: MUTF8_Tool.hpp
NBT_Test/: NBT_Test.cpp  NBT_Test.vcxproj  NBT_Test.vcxproj.filters  TestNbt.nbt  TestNbt.nbt.bak  test.bat
NBT_Tool/: NBT_Tool.vcxproj  NBT_Tool.vcxproj.filters
